Detect diagonal winner and alignment winner stroke fixed

--- a/class23/index.css
+++ b/class23/index.css
@@ -3,19 +3,51 @@
 }
 
 .cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
+    width: 45px;
+    height: 45px;
 }
 
 .winner {
     position: relative;
 }
 
+.winner .vertical-line,
+.winner .horizontal-line {
+    background-color: red;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
 .winner .vertical-line {
     width: 2px;
     height: 100%;
+}
+
+.winner .horizontal-line {
+    width: 100%;
+    height: 2px;
+}
+
+.winner .diagonal-line-1,
+.winner .diagonal-line-2 {
+    width: 100%;
+    height: 2px;
     background-color: red;
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+}
+
+.winner .diagonal-line-1 {
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+}
+
+.winner .diagonal-line-2 {
+    transform: translateX(-50%) translateY(-50%) rotate(-45deg);
 }
